Altered theme to Material3. Added invite new contact icon

--- a/app/src/main/res/layout/fragment_daily_forecast.xml
+++ b/app/src/main/res/layout/fragment_daily_forecast.xml
@@ -10,15 +10,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_margin="8dp"
+        android:theme="?attr/theme">
 
         <TextView
             android:id="@+id/label_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:textColor="@color/black"
             android:textStyle="normal"
+            android:textAppearance="?attr/textAppearanceBodyMedium"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Saturday" />
@@ -41,8 +42,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:textAlignment="textEnd"
-            android:textColor="@color/black"
             android:textStyle="normal"
+            android:textAppearance="?attr/textAppearanceBodyMedium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/label_day"
             tools:text="2022-11-08" />
@@ -55,8 +56,8 @@
             android:layout_marginTop="4dp"
             android:text="@string/label_weather_max_temp"
             android:textAlignment="textEnd"
-            android:textColor="@color/black"
             android:textStyle="normal"
+            android:textAppearance="?attr/textAppearanceBodySmall"
             app:layout_constraintStart_toEndOf="@+id/icon_weather"
             app:layout_constraintTop_toBottomOf="@+id/label_day" />
 
@@ -67,8 +68,8 @@
             android:layout_marginTop="4dp"
             android:text="@string/label_weather_average_temp"
             android:textAlignment="textEnd"
-            android:textColor="@color/black"
             android:textStyle="normal"
+            android:textAppearance="?attr/textAppearanceBodySmall"
             app:layout_constraintStart_toStartOf="@+id/label_max_temp"
             app:layout_constraintTop_toBottomOf="@+id/label_max_temp" />
 
@@ -79,8 +80,8 @@
             android:layout_marginTop="4dp"
             android:text="@string/label_weather_min_temp"
             android:textAlignment="textEnd"
-            android:textColor="@color/black"
             android:textStyle="normal"
+            android:textAppearance="?attr/textAppearanceBodySmall"
             app:layout_constraintStart_toStartOf="@+id/label_avg_temp"
             app:layout_constraintTop_toBottomOf="@+id/label_avg_temp" />
 
@@ -88,8 +89,8 @@
             android:id="@+id/value_max_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
             android:textStyle="italic"
+            android:textAppearance="?attr/textAppearanceBodySmall"
             app:layout_constraintStart_toStartOf="@+id/value_avg_temp"
             app:layout_constraintTop_toTopOf="@+id/label_max_temp"
             tools:text="70.1°F" />
@@ -99,8 +100,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:textColor="@color/black"
             android:textStyle="italic"
+            android:textAppearance="?attr/textAppearanceBodySmall"
             app:layout_constraintStart_toEndOf="@+id/label_avg_temp"
             app:layout_constraintTop_toTopOf="@+id/label_avg_temp"
             tools:text="67.3°F" />
@@ -109,8 +110,8 @@
             android:id="@+id/value_min_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
             android:textStyle="italic"
+            android:textAppearance="?attr/textAppearanceBodySmall"
             app:layout_constraintStart_toStartOf="@+id/value_avg_temp"
             app:layout_constraintTop_toTopOf="@+id/label_min_temp"
             tools:text="60.4°F" />
@@ -121,8 +122,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:text="@string/label_weather_precipitation"
-            android:textColor="@color/black"
             android:textStyle="normal"
+            android:textAppearance="?attr/textAppearanceBodySmall"
             app:layout_constraintStart_toEndOf="@+id/value_max_temp"
             app:layout_constraintTop_toTopOf="@+id/value_max_temp" />
 
@@ -131,8 +132,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_weather_humidity"
-            android:textColor="@color/black"
             android:textStyle="normal"
+            android:textAppearance="?attr/textAppearanceBodySmall"
             app:layout_constraintStart_toStartOf="@+id/label_precip"
             app:layout_constraintTop_toTopOf="@+id/value_avg_temp" />
 
@@ -141,8 +142,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_weather_wind"
-            android:textColor="@color/black"
             android:textStyle="normal"
+            android:textAppearance="?attr/textAppearanceBodySmall"
             app:layout_constraintStart_toStartOf="@+id/label_humidity"
             app:layout_constraintTop_toTopOf="@+id/value_min_temp" />
 
@@ -150,8 +151,8 @@
             android:id="@+id/value_precip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
             android:textStyle="italic"
+            android:textAppearance="?attr/textAppearanceBodySmall"
             app:layout_constraintStart_toStartOf="@+id/value_humidity"
             app:layout_constraintTop_toTopOf="@+id/label_precip"
             tools:text="23.4%" />
@@ -161,8 +162,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:textColor="@color/black"
             android:textStyle="italic"
+            android:textAppearance="?attr/textAppearanceBodySmall"
             app:layout_constraintStart_toEndOf="@+id/label_humidity"
             app:layout_constraintTop_toTopOf="@+id/label_humidity"
             tools:text="32.5%" />
@@ -171,8 +172,8 @@
             android:id="@+id/value_wind"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
             android:textStyle="italic"
+            android:textAppearance="?attr/textAppearanceBodySmall"
             app:layout_constraintStart_toStartOf="@+id/value_humidity"
             app:layout_constraintTop_toTopOf="@+id/label_wind"
             tools:text="04.1mph" />
@@ -182,8 +183,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:textColor="@color/black"
             android:textStyle="normal"
+            android:textAppearance="?attr/textAppearanceBodyMedium"
             app:layout_constraintStart_toStartOf="@+id/icon_weather"
             app:layout_constraintTop_toBottomOf="@+id/icon_weather"
             tools:text="Broken Clouds" />
