--- a/app/src/main/res/layout/fragment_forecast_list.xml
+++ b/app/src/main/res/layout/fragment_forecast_list.xml
@@ -10,6 +10,7 @@
         android:name="com.example.team_7_tcss_450.ui.weather.DailyWeatherFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="8dp"
         app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
