--- a/app/src/main/res/layout/fragment_chat_rooms_list.xml
+++ b/app/src/main/res/layout/fragment_chat_rooms_list.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MessageFragment">
+    tools:context=".ui.chat.ChatRoomsListFragment" >
 
-    <TextView
-        android:id="@+id/editMessages"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_messages"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerChatPreviews"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/fragment_chat_room_card" />
 </androidx.constraintlayout.widget.ConstraintLayout>
