--- a/app/src/main/res/layout/fragment_chat_rooms_list.xml
+++ b/app/src/main/res/layout/fragment_chat_rooms_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.chat.ChatRoomsListFragment" >
+    tools:context=".ui.chat.ChatPreviewsFragment" >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerChatPreviews"
