--- a/app/src/main/res/menu/chat_action_menu.xml
+++ b/app/src/main/res/menu/chat_action_menu.xml
@@ -3,8 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/add_new_chat"
-        android:icon="@drawable/ic_add_new_chat"
-        android:title="@string/menu_label_add_chat"
+        android:id="@+id/chat_add_member"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:icon="@drawable/ic_add_contact"
+        android:title="@string/action_invite_contact"
         app:showAsAction="ifRoom" />
 </menu>
