--- a/app/src/main/res/menu/contacts_action_menu.xml
+++ b/app/src/main/res/menu/contacts_action_menu.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/app_bar_search"
+        android:title="Search"
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="ifRoom|withText" />
+    <item
         android:id="@+id/invite_contact"
         android:icon="@drawable/ic_add_contact"
         android:title="@string/action_invite_contact"
