--- a/app/src/main/res/menu/contacts_action_menu.xml
+++ b/app/src/main/res/menu/contacts_action_menu.xml
@@ -7,7 +7,7 @@
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="ifRoom|withText" />
     <item
-        android:id="@+id/invite_contact"
+        android:id="@+id/contact_send_invite"
         android:icon="@drawable/ic_add_contact"
         android:title="@string/action_invite_contact"
         app:showAsAction="ifRoom" />
