--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -21,7 +21,17 @@
     <fragment
         android:id="@+id/navigation_contacts"
         android:name="com.example.team_7_tcss_450.ui.contacts.ContactListFragment"
-        android:label="@string/title_contacts" />
+        android:label="@string/title_contacts" >
+        <action
+            android:id="@+id/action_navigation_contacts_to_contactFragment"
+            app:destination="@id/contactFragment" />
+        <action
+            android:id="@+id/action_navigation_contacts_to_contactPendingListFragment"
+            app:destination="@id/navigation_pending_contacts" />
+        <action
+            android:id="@+id/action_navigation_contacts_to_contactSentListFragment2"
+            app:destination="@id/navigation_sent_contacts" />
+    </fragment>
     <navigation android:id="@+id/navigation_nested_chat"
         app:startDestination="@id/navigation_message">
         <fragment
@@ -43,4 +53,26 @@
                 app:argType="integer" />
         </fragment>
     </navigation>
+    <fragment
+        android:id="@+id/navigation_pending_contacts"
+        android:name="com.example.team_7_tcss_450.ui.contacts.ContactPendingListFragment"
+        android:label="@string/title_contacts"
+        tools:layout="@layout/fragment_contact_pending_list">
+        <action
+            android:id="@+id/action_contactPendingListFragment_to_contactFragment"
+            app:destination="@id/contactFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/navigation_sent_contacts"
+        android:name="com.example.team_7_tcss_450.ui.contacts.ContactSentListFragment"
+        android:label="@string/title_contacts"
+        tools:layout="@layout/fragment_contact_sent_list">
+        <action
+            android:id="@+id/action_contactSentListFragment_to_contactFragment"
+            app:destination="@id/contactFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/contactFragment"
+        android:name="com.example.team_7_tcss_450.ui.contacts.ContactFragment"
+        android:label="ContactFragment" />
 </navigation>
