--- a/app/src/main/res/layout/fragment_contact_pending_list.xml
+++ b/app/src/main/res/layout/fragment_contact_pending_list.xml
@@ -2,12 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.contacts.ContactPendingListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/contact_list"
-        android:name="com.example.team_7_tcss_450.ui.contacts.ContactsListFragment"
+        android:id="@+id/contact_pending_list"
+        android:name="com.example.team_7_tcss_450.ui.contacts.ContactsPendingListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -16,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context="com.example.team_7_tcss_450.ui.ContactListFragment"
-        tools:listitem="@layout/fragment_contact_card" />
+        tools:context="com.example.team_7_tcss_450.ui.ContactPendingListFragment"
+        tools:listitem="@layout/fragment_contact_pending_card" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
