--- a/app/src/main/res/layout/fragment_contact_request_list.xml
+++ b/app/src/main/res/layout/fragment_contact_request_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.contacts.ContactSentListFragment">
+    tools:context=".ui.contacts.ContactRequestListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/contact_sent_list"
@@ -19,6 +19,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:context="com.example.team_7_tcss_450.ui.ContactSentListFragment"
-        tools:listitem="@layout/fragment_contact_sent_card" />
+        tools:listitem="@layout/fragment_contact_request_card" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
